--- a/views/courseDetail.html
+++ b/views/courseDetail.html
@@ -11,9 +11,10 @@
             <p class="text text--md text--gris text-space1 margin--t1">
                 {{dataDetails.description}}
             </p>
-            <a href="#" class="btn btn--academy2 btn-rojo btn-xlg text--upper margin--t1 margin--b1" data-toggle="modal" data-target="#js-ingreso">
+            <a href="" class="btn btn--academy2 hidden btn-rojo btn-xlg text--upper margin--t1 margin--b1" data-toggle="modal" data-target="#js-ingreso">
                  Inscríbete
             </a>
+            <button-course sessions="{{ dataDetails.sessions }}" uuid="{{ dataDetails.uuid}}" username="{{dataUser.username}}"></button-course>
         </div>
         <div class="col-xs-5">
             <img ng-src="{{dataDetails.image}}" alt="" class="img-responsive">
@@ -27,14 +28,17 @@
             <h2 class="text text--azul_mid text--xxxlg text--xbold margin--b05 text-space1">
                 Acerca del Curso
             </h2>
-            <p class="text text--gris"> {{dataDetails.about}} </p>
+
+            <c-details about="{{dataDetails.about}}"></c-details>
             <h3 class="text text--lg text--xbold margin--b1 text-space1 margin--t1">
                 Competencias a desarrollar:
             </h3>
             <p class="text text--gris text--xbold">
                 Al finalizar este curso usted estará en capacidad de:
             </p>
-            <ol class="list-normal text text--gris margin--t1">
+            <competencies-list data="{{dataDetails.competencies}}"></competencies-list>
+            <ol class="list-normal text text--gris margin--t1 hidden">
+                
                 <li ng-repeat="competence in dataDetails.competencies">
                     {{competence.description}}
                 </li>
@@ -55,16 +59,13 @@
             <h3 class="text text--lg text--xbold margin--b1 text-space1 margin--t1">
                 Preguntas que podrá resolver después de completar el curso:
             </h3>
-            <p>
-                {{dataDetails.goals}}
-            </p>
+                <c-goals goals="{{dataDetails.goals}}"></c-goals>
 
             <hr class="sep sep--gris sep--lg">
 
             <h3 class="text text--md text--xbold margin--b1 text-space1 margin--t1">
                 Profesores:
             </h3>
-
             <div class="row" ng-repeat="tutorData in dataDetails.tutors">
                 <div class="col-xs-2 vertical-middle">
                     <img ng-src="{{tutorData.avatar}}" alt="" class="img-circle sidebar-imageCurso__image img-responsive">
@@ -76,7 +77,7 @@
                     <p class="text text--gris text--sm margin--t0"> {{tutorData.jobtitle}}</p>
                 </div>
                 <div class="col-xs-12">
-                    <p class="text text--gris text--lite"> {{tutorData.about}} </p>
+                    <p class="text text--gris text--lite">{{tutorData.about}} </p>
                 </div>
             </div>
         </div>
@@ -85,7 +86,9 @@
                 Sesiones
             </h3>
             <div class="form-group">
-                <select class="form-control" ng-model="initial_dates" ng-options="item for item in dataSessionDates"></select>
+                <select class="form-control" ng-model="initial_dates" ng-options="item['dates'] for item in dataSessionDates">
+                    <option value="">Seleccione una sesión</option>
+                </select>
             </div>
 
             <div class="clearfix"></div><hr class="sep sep--gris sep--xs">
@@ -95,11 +98,7 @@
                     Duración:
                 </p>
             </div>
-            <div class="col-xs-6">
-                <p class="text text--gris text--lite text--xs">
-                    4 Semanas
-                </p>
-            </div>
+            <c-duration data="{{dataSessionDates[0]}}" details="1" class="text--gris text--xs text text--lite"></c-duration>
             
             <div class="clearfix"></div><hr class="sep sep--gris sep--xs">
 
@@ -109,7 +108,7 @@
                 </p>
             </div>
             <div class="col-xs-6">
-                <p class="text text--gris text--lite text--xs">
+                <p class="text text--gris text--lite text--xs" id="time-on-week">
                     6 -8 Horas
                 </p>
             </div>
@@ -137,6 +136,9 @@
             <h3 class="text text--azul_osc text--lg text--xbold text-space1 margin--t1">
                 Lo que dice la gente
             </h3>
+            <div ng-controller="comments">
+                <comments-on-course data="{{commentsForCourse}}"></comments-on-course>
+            </div>
         </div>
         <div class="clearfix"></div><hr class="sep sep--gris sep--lg">
         <div class="col-xs-12">
@@ -244,7 +246,7 @@
                 <div class="col-lg-3 col-xs-6 margin--t1">
                     <div class="col-xs-12 sidebar-bloqs2">
                         <div class="row sidebar-imageCurso">
-                            <img src="images/Google-Adwords.png" alt="" class="img-responsive center-block">
+                            <img src="images/googleAdw.jpg" alt="" class="img-responsive center-block">
                             <div class="col-xs-12 sidebar-imageCurso__nombre">
                                 <img src="images/avatar.jpg" alt="" class="img-circle sidebar-imageCurso__image">
                                 <span class="text text--blanco">
