--- a/views/allCoursesPublic.html
+++ b/views/allCoursesPublic.html
@@ -1,5 +1,5 @@
 
-<section class="col-xs-12 sidebar-yellowGrandient sidebar-yellowGrandient--xlg sidebar-add__montain">
+<section class="col-xs-12 sidebar-yellowGrandient sidebar-yellowGrandient--xlg ">
     <div class="container text-center">
         <h1 class="text text--azul_osc text--xxxxlg text--xbold margin--b0 text-center text-space1 text--upper">
             cursos y capacitación
