--- a/views/profile.html
+++ b/views/profile.html
@@ -34,7 +34,7 @@
                         <table class="table table-hover table--detallePerfil">
                             <tr>
                                 <td>
-                                    <span class="icon-tag text--gris text--md"></span>
+                                    <span class="glyphicon glyphicon-tag text--gris text--md"></span>
                                 </td>
                                 <td>
                                     <p class="text text--xbold text--gris_osc margin--t0">
@@ -49,7 +49,7 @@
                             </tr>
                             <tr>
                                 <td>
-                                    <span class="icon-tag text--gris text--md"></span>
+                                    <span class="glyphicon glyphicon-tag text--gris text--md"></span>
                                 </td>
                                 <td>
                                     <p class="text text--xbold text--gris_osc margin--t0">
@@ -64,7 +64,7 @@
                             </tr>
                             <tr>
                                 <td>
-                                    <span class="icon-tag text--gris text--md"></span>
+                                    <span class="glyphicon glyphicon-tag text--gris text--md"></span>
                                 </td>
                                 <td>
                                     <p class="text text--xbold text--gris_osc margin--t0">
@@ -73,6 +73,21 @@
                                 </td>
                                 <td class="text-right">
                                     <span class="label label-rojo text--md">
+                                        0
+                                    </span>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>
+                                    <span class="glyphicon glyphicon-tag text--gris text--md"></span>
+                                </td>
+                                <td>
+                                    <p class="text text--xbold text--gris_osc margin--t0">
+                                    Certificaciones obtenidas
+                                    </p>
+                                </td>
+                                <td class="text-right">
+                                    <span class="label label-azul text--md">
                                         0
                                     </span>
                                 </td>
