--- a/views/certificates/allCertificates.html
+++ b/views/certificates/allCertificates.html
@@ -1,5 +1,5 @@
 <div ng-controller="certificates">
-<section class="col-xs-12 sidebar-greenGrandient sidebar-greenGrandient--xlg sidebar-add__montain">
+<section class="col-xs-12 sidebar-greenGrandient sidebar-greenGrandient--xlg ">
     <div class="container text-center">
         <h1 class="text text--azul_mid text--xxxxlg text--xbold margin--b0 text-center text-space1 text--upper">
             Certificate ;)
