--- a/views/courseDetail.html
+++ b/views/courseDetail.html
@@ -68,7 +68,7 @@
             </h3>
             <div class="row" ng-repeat="tutorData in dataDetails.tutors">
                 <div class="col-xs-2 vertical-middle">
-                    <img ng-src="{{tutorData.avatar}}" alt="" class="img-circle sidebar-imageCurso__image img-responsive">
+                    <img ng-src="{{tutorData.avatar}}" alt="" class="img-circle sidebar-imageCurso__image img-responsive avatar--tutor">
                 </div>
                 <div class="col-xs-10 vertical-middle">
                     <p class="text text--azul text--xbold text--md margin--t05 margin--b0">
@@ -146,138 +146,9 @@
                 Otros cursos de interes
             </h2>
             <div class="clearfix"></div>
-            <div class="row">
-                <div class="col-lg-3 col-xs-6 margin--t1">
-                    <div class="col-xs-12 sidebar-bloqs2">
-                        <div class="row sidebar-imageCurso">
-                            <img src="images/Marketing-Digital-101.png" alt="" class="img-responsive center-block">
-                            <div class="col-xs-12 sidebar-imageCurso__nombre">
-                                <img src="images/avatar.jpg" alt="" class="img-circle sidebar-imageCurso__image">
-                                <span class="text text--blanco">
-                                    Andrés Escobar
-                                </span>
-                            </div>
-                            <div class="col-xs-12 sidebar-imageCurso__qualy">
-                                <span class="icon-star"></span>
-                                <span class="icon-star"></span>
-                                <span class="icon-star"></span>
-                                <span class="icon-star"></span>
-                                <span class="icon-star"></span>
-                            </div>
-                        </div>
-                        <h3 class="text text--gris text--md text--bold margin--t2">
-                            Marketing Digital 101
-                        </h3>
-                        <p class="text text--sm text--gris_cla margin--t1">
-                            Aprende e Interioriza los 10 principales conceptos básicos del Marketing y la Comunicación Digital.
-                        </p>
-                        <p class="text text--azul_cla text--lite margin--t1">
-                            <span class="icon-time"></span> 10 Horas
-                        </p>
-                        <a href="detalle-curso.html" class="btn btn-gosh btn-gosh--gris btn-lg margin--t05">
-                            MÁS INFORMACIÓN
-                        </a>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-xs-6 margin--t1">
-                    <div class="col-xs-12 sidebar-bloqs2">
-                        <div class="row sidebar-imageCurso">
-                            <img src="images/Estrategia-Marketing-Digital.png" alt="" class="img-responsive center-block">
-                            <div class="col-xs-12 sidebar-imageCurso__nombre">
-                                <img src="images/avatar.jpg" alt="" class="img-circle sidebar-imageCurso__image">
-                                <span class="text text--blanco">
-                                    Andrés Escobar
-                                </span>
-                            </div>
-                            <div class="col-xs-12 sidebar-imageCurso__qualy">
-                                <span class="icon-star"></span>
-                                <span class="icon-star"></span>
-                                <span class="icon-star"></span>
-                                <span class="icon-star"></span>
-                                <span class="icon-star"></span>
-                            </div>
-                        </div>
-                        <h3 class="text text--gris text--md text--bold margin--t2">
-                            Estrategia Digital
-                        </h3>
-                        <p class="text text--sm text--gris_cla margin--t1">
-                            Aprende a planear una estrategia de Marketing Digital partiendo de los objetivos estratégicos de tu negocio.
-                        </p>
-                        <p class="text text--azul_cla text--lite margin--t1">
-                            <span class="icon-time"></span> 20 Horas
-                        </p>
-                        <a href="detalle-curso.html" class="btn btn-gosh btn-gosh--gris btn-lg margin--t05">
-                            MÁS INFORMACIÓN
-                        </a>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-xs-6 margin--t1">
-                    <div class="col-xs-12 sidebar-bloqs2">
-                        <div class="row sidebar-imageCurso">
-                            <img src="images/Facebook-Marketing.png" alt="" class="img-responsive center-block">
-                            <div class="col-xs-12 sidebar-imageCurso__nombre">
-                                <img src="images/avatar.jpg" alt="" class="img-circle sidebar-imageCurso__image">
-                                <span class="text text--blanco">
-                                    Andrés Escobar
-                                </span>
-                            </div>
-                            <div class="col-xs-12 sidebar-imageCurso__qualy">
-                                <span class="icon-star"></span>
-                                <span class="icon-star"></span>
-                                <span class="icon-star"></span>
-                                <span class="icon-star"></span>
-                                <span class="icon-star-o"></span>
-                            </div>
-                        </div>
-                        <h3 class="text text--gris text--md text--bold margin--t2">
-                            Facebook Marketing 
-                        </h3>
-                        <p class="text text--sm text--gris_cla margin--t1">
-                            Aprende a usar Facebook como herramienta para incrementar las ventas y retener tus clientes.
-                        </p>
-                        <p class="text text--azul_cla text--lite margin--t1">
-                            <span class="icon-time"></span> 40 Horas
-                        </p>
-                        <a href="detalle-curso.html" class="btn btn-gosh btn-gosh--gris btn-lg margin--t05">
-                            MÁS INFORMACIÓN
-                        </a>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-xs-6 margin--t1">
-                    <div class="col-xs-12 sidebar-bloqs2">
-                        <div class="row sidebar-imageCurso">
-                            <img src="images/googleAdw.jpg" alt="" class="img-responsive center-block">
-                            <div class="col-xs-12 sidebar-imageCurso__nombre">
-                                <img src="images/avatar.jpg" alt="" class="img-circle sidebar-imageCurso__image">
-                                <span class="text text--blanco">
-                                    Andrés Escobar
-                                </span>
-                            </div>
-                            <div class="col-xs-12 sidebar-imageCurso__qualy">
-                                <span class="icon-star"></span>
-                                <span class="icon-star"></span>
-                                <span class="icon-star-o"></span>
-                                <span class="icon-star-o"></span>
-                                <span class="icon-star-o"></span>
-                            </div>
-                        </div>
-                        <h3 class="text text--gris text--md text--bold margin--t2">
-                            Google Adwords
-                        </h3>
-                        <p class="text text--sm text--gris_cla margin--t1">
-                            Aprende a crear campañas de manera profesional en 8 pasos en la plataforma de Google Adwords
-                        </p>
-                        <p class="text text--azul_cla text--lite margin--t1">
-                            <span class="icon-time"></span> 40 Horas
-                        </p>
-                        <a href="detalle-curso.html" class="btn btn-gosh btn-gosh--gris btn-lg margin--t05">
-                            MÁS INFORMACIÓN
-                        </a>
-                    </div>
-                </div>
-            </div>
+            <courses-list limit="1" filter="related" slug="slug"></courses-list>
             <div class="col-xs-12 text-center margin--t3">
-                <a href="cursos.html" class="btn btn--academy2 btn-verde btn-xlg text--upper">
+                <a href="#/allCourses" class="btn btn--academy2 btn-verde btn-xlg text--upper">
                     Ver todos los cursos
                 </a>
             </div>
