--- a/views/courses/courseContents.html
+++ b/views/courses/courseContents.html
@@ -102,7 +102,7 @@
                                 80  
                             </p>
                             <div class="clearfix"></div>
-                                <a class="btn btn-verde btn-lg margin--t1 BlockTest" ng-disabled="is_disabled()" data-mode="1" target="_blank" ng-click="open_test()">
+                            <a class="btn btn-verde btn-lg margin--t1 BlockTest" ng-disabled="!modules[modulePosition].can_open" data-mode="1" target="_blank" ng-click="open_test()">
                                     Realizar Evaluación
                                 </a>
                                 </div>
