--- a/views/allCoursesPublic.html
+++ b/views/allCoursesPublic.html
@@ -1,24 +1,23 @@
 
-<section class="col-xs-12 sidebar-yellowGrandient sidebar-yellowGrandient--xlg ">
+<section class="col-xs-12 sidebar-yellowGrandient sidebar-yellowGrandient--xlg sidebar-add__montain">
     <div class="container text-center">
         <h1 class="text text--azul_osc text--xxxxlg text--xbold margin--b0 text-center text-space1 text--upper">
             cursos y capacitación
         </h1>
         <p class="text text--lg text--gris text-center text-space1 margin--t05">
-            Adquiere habilidades y competencias técnicas en cuestión de semanas
+        Adquiere habilidades y competencias técnicas en cuestión de semanas
         </p>
-        <a href="" class="btn btn--academy2 btn-cursos btn--right btn-xlg margin--t1">
+        <a href="#" class="btn btn--academy2 btn-cursos btn--right btn-xlg margin--t1">
             ¿Cómo funcionan?
         </a>
     </div>
 </section>
-
 <section class="col-xs-12 sidebar-section2 sidebar-section2--cursos sidebar-blanco">
     <div class="container">
         <div class="col-xs-12 margin--tn5">
             <div class="row">
-
-                <div class="col-lg-3 col-xs-6 margin--t1" ng-repeat="coursePublic in coursesall">
+                <courses-list filter="absolute" limit="4"></courses-list>
+                <div class="col-lg-3 col-xs-6 margin--t1 hidden" ng-repeat="coursePublic in coursesall">
                     <div class="col-xs-12 sidebar-bloqs2">
                         <div class="row sidebar-imageCurso">
                             <a ng-href="">
