--- a/views/simpleCourse/tab4.html
+++ b/views/simpleCourse/tab4.html
@@ -96,7 +96,7 @@
     					<textarea id="message-box" class="form-control" rows="3" placeholder="Escribe un comentario" ng-model="post"></textarea>
     				</div>
     			</div>
-    			<button type="submit" class="btn btn-default pull-right" ng-click="addPost(post,idTopic)">Enviar Comentario</button>
+    			<button type="submit" class="btn btn-default pull-right" ng-click="addPost(post,topicId)">Enviar Comentario</button>
     		</form>
     	</div>
 
