--- a/views/certificates/catalogCertificate.html
+++ b/views/certificates/catalogCertificate.html
@@ -1,13 +1,16 @@
-<div class="panel panel-default margin--t2" ng-if="items.length==0">
-    <div class="panel-body">
-        <div class="alert alert-info">
+<div class="panel-default margin--t2" ng-class="{panel:showPanel}" ng-if="items.length==0">
+    <div class="panel-body" ng-class="{'panel-body':showPanel}">
+        <div class="alert alert-info" ng-if="showPanel">
             No tienes certificaiones en esta area.
+        </div>
+        <div class="alert alert-info">
+            Pronto encontraras las mejores certificaciones con las que podras prepararte.
         </div>
     </div>
     
 </div>
-<div class="panel panel-default margin--t2" ng-repeat="item in items">
-    <div class="panel-body">
+<div class="panel-default margin--t2" ng-class="{panel:showPanel}"ng-repeat="item in items">
+    <div class="" ng-class="{'panel-body':showPanel}">
         <div class="row">
             <div class="col-xs-12">
                 <h2 class="text text--xlg text--gris_osc text--xbold">
