--- a/views/courses/courseContents.html
+++ b/views/courses/courseContents.html
@@ -63,7 +63,7 @@
                                                     <strong> - - - </strong>
                                                 </td>
                                                 <td style="text-align:center;">
-                                                    <a href="{{endpoint + '/lms/course/' + uuid + '/module/' +dataSimpleCourse.modules[modulePosition].submodules[submodulePosition].module_pk + '/content/' + content.content_pk + '/sit/files/' }}" target="_blank" class="btn btn-gosh btn-xsm btn-gosh--verde text--upper" download>
+                                                    <a href="{{content.file[0]}}" target="_blank" class="btn btn-gosh btn-xsm btn-gosh--verde text--upper" download>
                                                         Descargar
                                                     </a>
                                                 </td>
