--- a/views/footer.html
+++ b/views/footer.html
@@ -95,7 +95,7 @@
                 </div>
                 <div class="col-xs-3">
                     <p class="text text--xbold text--gris">
-                        Contáctanos <a class="sidebar-footer__iconSocial sidebar-footer__iconSocial--facebook"><span class="icon-facebook"></span></a> <a class="sidebar-footer__iconSocial sidebar-footer__iconSocial--twitter"><span class="icon-twitter"></span></a>
+                        Contáctanos <a class="sidebar-footer__iconSocial sidebar-footer__iconSocial--facebook"><span class="fa fa-facebook"></span></a> <a class="sidebar-footer__iconSocial sidebar-footer__iconSocial--twitter"><span class="fa fa-twitter"></span></a>
                     </p>
                     <p class="text text--gris text--xs margin--t2">
                         ©Marketing.university 2015
