--- a/views/courses_list.html
+++ b/views/courses_list.html
@@ -12,7 +12,7 @@
                         </a>
                         <div class="sidebar-imageCurso__nombre">
                             <div class="col-md-4">
-                                <img ng-if="coursePublic.tutors[0].avatar != null" ng-src="{{coursePublic.tutors[0].avatar}}" alt="" class="img-circle sidebar-imageCurso__image  img-responsive" > 
+                                <img ng-if="coursePublic.tutors[0].avatar != null" ng-src="{{coursePublic.tutors[0].avatar}}" alt="" class="img-circle sidebar-imageCurso__image" > 
                                 <img ng-if="coursePublic.tutors[0].avatar == null" src="images/avatarDefault.png" alt="" class="img-circle sidebar-imageCurso__image">
                             </div>
                             <div class="col-md-8">
@@ -39,7 +39,7 @@
 
                         </div>
                     </div>
-                    <h3 class="text text--gris text--md text--bold margin--t2">
+                    <h3 class="text text--gris titleCourse text--md text--bold margin--t2">
                         {{coursePublic.course.name | limitTo:34}}
                     </h3>
                     <p class="text text--sm text--gris_cla margin--t1 textDescription">
@@ -47,7 +47,7 @@
                     {{ coursePublic.course.description | limitTo:127}}...
 
                     </p>
-                    <p class="text text--azul_cla text--lite margin--t1">
+                    <p class="text text--azul_cla timeSpace text--lite margin--t1">
                     <span class="fa fa-clock-o"></span><span ng-if="coursePublic.course.hours != null"> {{coursePublic.course.hours}} Horas</span>
                     <span ng-if="coursePublic.course.hours == null"> No hay un tiempo de duración asignado al curso.</span>
                     </p>
@@ -73,7 +73,7 @@
                         </a>
                         <div class="sidebar-imageCurso__nombre">
                             <div class="col-md-4">
-                                <img ng-if="coursePublic.tutors[0].avatar != null" ng-src="{{coursePublic.tutors[0].avatar}}" alt="" class="img-circle sidebar-imageCurso__image  img-responsive" > 
+                                <img ng-if="coursePublic.tutors[0].avatar != null" ng-src="{{coursePublic.tutors[0].avatar}}" alt="" class="img-circle sidebar-imageCurso__image" > 
                                 <img ng-if="coursePublic.tutors[0].avatar == null" src="images/avatarDefault.png" alt="" class="img-circle sidebar-imageCurso__image">
                             </div>
                             <div class="col-md-8">
@@ -98,7 +98,7 @@
 
                         </div>
                     </div>
-                    <h3 class="text text--gris text--md text--bold margin--t2">
+                    <h3 class="text text--gris titleCourse text--md text--bold margin--t2">
                         {{coursePublic.course.name | limitTo:34}}
                     </h3>
                     <p class="text text--sm text--gris_cla margin--t1 textDescription">
@@ -106,7 +106,7 @@
                     {{ coursePublic.course.description | limitTo:127}}...
 
                     </p>
-                    <p class="text text--azul_cla text--lite margin--t1">
+                    <p class="text text--azul_cla timeSpace text--lite margin--t1">
                     <span class="fa fa-clock-o"></span><span ng-if="coursePublic.course.hours != null"> {{coursePublic.course.hours}} Horas</span>
                     <span ng-if="coursePublic.course.hours == null"> No hay un tiempo de duración asignado al curso.</span>
                     </p>
@@ -129,7 +129,7 @@
                 </a>
                 <div class="sidebar-imageCurso__nombre">
                     <div class="col-md-4">
-                        <img ng-if="coursePublic.tutors[0].avatar != null" ng-src="{{coursePublic.tutors[0].avatar}}" alt="" class="img-circle sidebar-imageCurso__image  img-responsive" > 
+                        <img ng-if="coursePublic.tutors[0].avatar != null" ng-src="{{coursePublic.tutors[0].avatar}}" alt="" class="img-circle sidebar-imageCurso__image" > 
                         <img ng-if="coursePublic.tutors[0].avatar == null" src="images/avatarDefault.png" alt="" class="img-circle sidebar-imageCurso__image">
                     </div>
                     <div class="col-md-8">
@@ -153,7 +153,7 @@
 
                 </div>
             </div>
-            <h3 class="text text--gris text--md text--bold margin--t2">
+            <h3 class="text text--gris titleCourse text--md text--bold margin--t2">
                 {{coursePublic.course.name | limitTo:34}}
             </h3>
             <p class="text text--sm text--gris_cla margin--t1 textDescription">
@@ -161,7 +161,7 @@
             {{ coursePublic.course.description | limitTo:127}}...
 
             </p>
-            <p class="text text--azul_cla text--lite margin--t1">
+            <p class="text text--azul_cla timeSpace text--lite margin--t1">
             <span class="fa fa-clock-o"></span><span ng-if="coursePublic.course.hours != null"> {{coursePublic.course.hours}} Horas</span>
             <span ng-if="coursePublic.course.hours == null"> No hay un tiempo de duración asignado al curso.</span>
             </p>
@@ -174,7 +174,8 @@
         <div class="col-xs-12 sidebar-bloqs2">
             <div class="row sidebar-imageCurso">
                 <a ng-href="">
-                    <img ng-src="{{coursePublic.course.image}}" class="img-course" width="330" height="185">
+                    <img ng-src="{{coursePublic.course.image}}" class="img-course" ng-if="coursePublic.course.image != null">
+                        <img src="images/defaultCourseCover.png" alt="" ng-if="coursePublic.course.image == null" class="img-course img-responsive">
                 </a>
                 <div class="sidebar-imageCurso__nombre">
                     <div class="col-md-4">
@@ -203,14 +204,14 @@
 
                 </div>
             </div>
-            <h3 class="text text--gris text--md text--bold margin--t2">
+            <h3 class="text text--gris titleCourse text--md text--bold margin--t2">
                 {{coursePublic.course.name | limitTo:34}}
             </h3>
             <p class="text text--sm text--gris_cla margin--t1 textDescription"> 
             {{ coursePublic.course.description | limitTo:127}}...
 
             </p>
-            <p class="text text--azul_cla text--lite margin--t1">
+            <p class="text text--azul_cla timeSpace text--lite margin--t1">
             <span class="fa fa-clock-o"></span><span ng-if="coursePublic.course.hours != null"> {{coursePublic.course.hours}} Horas</span>
             <span ng-if="coursePublic.course.hours == null"> No hay un tiempo de duración asignado al curso.</span>
             </p>
