--- a/css/main.css
+++ b/css/main.css
@@ -1120,3 +1120,4 @@ a {
 
 .btnRojo{background:#c75130;color:#fff;}
 .btnSuccess{background:#0F9D58;color:#fff}
+.courseImageCatalog{height:167px; max-width: 100%;}
