--- a/views/profile.html
+++ b/views/profile.html
@@ -83,7 +83,7 @@
                                 </td>
                                 <td>
                                     <p class="text text--xbold text--gris_osc margin--t0">
-                                    Certificaciones obtenidas
+                                    Aplicaciones Empleos
                                     </p>
                                 </td>
                                 <td class="text-right">
