--- a/views/courses/blockCourses.html
+++ b/views/courses/blockCourses.html
@@ -7,11 +7,11 @@
                 </h2>
             </div>
             <div class="col-xs-4">
-                <img src="{{ item.course.image }}" alt="" class="img-responsive pull-left">
+                <img src="{{ item.course.image }}" alt="" class="img-responsive pull-left courseImageCatalog ">
             </div>
             <div class="col-xs-6">
                 <p class="text text--lite text--gris">
-                    {{ item.course.description }}
+                    {{ item.course.description  | limitTo:35}}
                 </p>
                 <div class="row">
                     <div class="col-xs-6">
