--- a/views/allCoursesPublic.html
+++ b/views/allCoursesPublic.html
@@ -7,7 +7,7 @@
         <p class="text text--lg text--gris text-center text-space1 margin--t05">
         Adquiere habilidades y competencias técnicas en cuestión de semanas
         </p>
-        <a href="#" class="btn btn--academy2 btn-cursos btn--right btn-xlg margin--t1">
+        <a href="#/" class="btn btn--academy2 btn-cursos btn--right btn-xlg margin--t1">
             ¿Cómo funcionan?
         </a>
     </div>
