--- a/views/courses/simpleCourse.html
+++ b/views/courses/simpleCourse.html
@@ -2,10 +2,10 @@
     <div class="row">
         <div class="container">
             <div class="col-xs-8">
-                <p class="text text--azul_osc text--lg text--xbold text-space1 margin--t0 margin--b0 text--upper">
+                <p class="text text--azul_osc text--m text--xbold text-space1 margin--t0 margin--b0 text--upper">
                     {{dataSimpleCourse.course.category}}
                 </p>
-                <h1 class="text text--gris text--xxxlg text--xbold margin--t0 margin--b0">
+                <h1 class="text text--gris text--xlg margin--t0 margin--b0">
                     {{dataSimpleCourse.course.name}}
                 </h1>
             </div>
