--- a/css/main.css
+++ b/css/main.css
@@ -1143,11 +1143,11 @@ a:focus {
 }
    
 
-.panel {
+.panell {
     margin-bottom: 0px !important;
     background-color: #f5f5f5;
     border: none !important; 
-    border-radius: 4px;
+    border-radius: 0px;
     -webkit-box-shadow: 0 1px 1px rgba(0,0,0,.05);
     box-shadow: 0 1px 1px rgba(0,0,0,.05);
 }
