--- a/views/profile.html
+++ b/views/profile.html
@@ -161,7 +161,7 @@
                 <div ng-show="display_menu == 3">
 
                     <a href="#" bookmarklet>ENLACE PARA BOOKMARKLET</a>
-                    <h1 class="text text--lite text--lg margin--t2 text--gris">
+                    <h1 class="text text--lite text--lg margin--t1 text--bold text--gris">
                         Recursos Favoritos
                     </h1>
 
