--- a/views/navbar.html
+++ b/views/navbar.html
@@ -7,7 +7,7 @@
                 </a>
             </div>
             <div class="col-xs-6">
-                <ul class="nav nav-pills nav-interno" ng-class="{hidden:showMenu}">
+                <ul class="nav nav-pills nav-interno">
                     <li id="courseView" class="active">
                         <a href="" ng-click="showCourses();" >Mis cursos</a>
                     </li>
