--- a/views/profile.html
+++ b/views/profile.html
@@ -157,8 +157,10 @@
                 </div>
 
                 <!-- Recursos Favoritos -->
-
-                <div ng-show="display_menu == 3">
+                <div>
+                
+                </div>
+                <div ng-show="display_menu == 3" ng-if="1>2">
 
                     <a href="#" bookmarklet>ENLACE PARA BOOKMARKLET</a>
                     <h1 class="text text--lite text--lg margin--t2 text--gris">
