--- a/views/courseDetail.html
+++ b/views/courseDetail.html
@@ -9,7 +9,7 @@
                {{dataDetails.name}}
             </h1>
             <p class=" courseDetailDescription text text--md text--gris text-space1 margin--t1">
-                {{dataDetails.description | limitTo:100}}
+                {{dataDetails.description | limitTo:200}}...
             </p>
             <button-course sessions="{{ dataDetails.sessions }}" uuid="{{ slug }}" username="{{dataUser.username}}" ng-if="authenticated"></button-course>
         </div>
@@ -78,9 +78,7 @@
                 Sesiones
             </h3>
             <div class="form-group">
-                <select class="form-control" ng-model="initial_dates" ng-options="item['dates'] for item in dataSessionDates">
-                    <option value="">Seleccione una sesión</option>
-                </select>
+                <sessions-list data="{{dataSessionDates}}"></sessions-list>
             </div>
 
             <div class="clearfix"></div><hr class="sep sep--gris sep--xs">
@@ -121,9 +119,13 @@
                 Ninguno
             </p>
 
-            <a href="#" class="btn btn-verde btn-xlg margin--t1" data-toggle="modal" data-target="#js-ingreso">
+            <a href="#" class="btn btn-verde btn-xlg margin--t1" data-toggle="modal" data-target="#js-ingreso" ng-if="showRegisterButton">
                  Inscríbete
             </a>
+            <a href="{{ url }}" class="btn btn-verde btn-xlg margin--t1"  ng-if="showGetInButton">
+                 Ingresar
+            </a>
+            <a class="btn btn--academy btn-verde btn--right btn-lg btn--ingresar ng-scope" data-toggle="modal" data-target="#js-ingreso" ng-if="!authenticated">INGRESAR</a>
 
             <h3 class="text text--azul_osc text--lg text--xbold text-space1 margin--t1">
                 Lo que dice la gente
